Fix for missing variable for geonode lb hostname

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,7 +110,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - GEONODE_INSTANCE_NAME=starterkit
-      - GEONODE_LB_HOST_IP=155.253.20.48
+      - GEONODE_LB_HOST_IP=demo.getit.com
       - GEONODE_LB_PORT=80
       - DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
       - DEFAULT_BACKEND_DATASTORE=datastore
@@ -186,7 +186,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - GEONODE_INSTANCE_NAME=starterkit
-      - GEONODE_LB_HOST_IP=155.253.20.48
+      - GEONODE_LB_HOST_IP=demo.getit.com
       - GEONODE_LB_PORT=80
       - DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
       - DEFAULT_BACKEND_DATASTORE=datastore
@@ -253,8 +253,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - geoserver-data-dir:/geoserver_data/data
     environment:
-      - GEONODE_LB_HOST_IP=155.253.20.48
       - GEONODE_INSTANCE_NAME=starterkit
+      - GEONODE_LB_HOST_IP=demo.getit.com
       - GEONODE_LB_PORT=80
       - DOCKERHOST
       - PUBLIC_PORT=80
@@ -280,7 +280,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - GEONODE_INSTANCE_NAME=starterkit
-      - GEONODE_LB_HOST_IP=155.253.20.48
+      - GEONODE_LB_HOST_IP=demo.getit.com
       - GEONODE_LB_PORT=80
       - DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
       - DEFAULT_BACKEND_DATASTORE=datastore
@@ -352,6 +352,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - GEONODE_INSTANCE_NAME=starterkit
+      - GEONODE_LB_HOST_IP=demo.getit.com
+      - GEONODE_LB_PORT=80
       - SERVICEPROVIDER_COUNTRY=Italy
       - SERVICEPROVIDER_STATE=MI
       - SERVICEPROVIDER_SITE=http://www.irea.cnr.it
