--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -181,7 +181,7 @@ services:
       - db
       - elasticsearch
       - rabbitmq
-    command: celery worker --app=geosk.celery_app:app -B -l INFO
+    command: celery worker --app=geosk.celeryapp:app -B -l INFO
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
@@ -198,7 +198,7 @@ services:
       - DJANGO_SETTINGS_MODULE=geosk.settings
       - ALLOWED_HOSTS=['django',]
       - DOCKER_ENV=production
-      - CELERY_CMD=celery worker --app=geosk.celery_app:app -B -l INFO
+      - CELERY_CMD=celery worker --app=geosk.celeryapp:app --broker=amqp://guest:guest@rabbitmq:5672/ -B -l INFO
       - IS_CELERY=true
       - C_FORCE_ROOT=1
       - GEOSERVER_PUBLIC_LOCATION=http://geonode/geoserver/
