--- a/templates/starterkit/0/docker-compose.yml
+++ b/templates/starterkit/0/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "2"
+${ALLOWED_HOSTS}version: "2"
 services:
 
   db:
@@ -10,7 +10,7 @@ services:
     labels:
         org.geonode.component: db
         org.geonode.instance.name: starterkit
-        io.rancher.scheduler.affinity:host_label: geonodehost=satfarm2
+        io.rancher.scheduler.affinity:host_label: ${HOST_AFFINITY}
     volumes:
       - dbdata:/var/lib/postgresql/data
       - dbbackups:/pg_backups
@@ -29,7 +29,7 @@ services:
     labels:
         org.geonode.component: dbsos
         org.geonode.instance.name: starterkit
-        io.rancher.scheduler.affinity:host_label: geonodehost=satfarm2
+        io.rancher.scheduler.affinity:host_label: ${HOST_AFFINITY}
     volumes:
       - dbsosdata:/dbsosdata
     environment:
@@ -77,7 +77,7 @@ services:
     labels:
         org.geonode.component: elasticsearch
         org.geonode.instance.name: starterkit
-        io.rancher.scheduler.affinity:host_label: geonodehost=satfarm2
+        io.rancher.scheduler.affinity:host_label: ${HOST_AFFINITY}
 
   rabbitmq:
     image: rabbitmq
@@ -88,7 +88,7 @@ services:
     labels:
         org.geonode.component: rabbitmq
         org.geonode.instance.name: starterkit
-        io.rancher.scheduler.affinity:host_label: geonodehost=satfarm2
+        io.rancher.scheduler.affinity:host_label: ${HOST_AFFINITY}
 
   django:
     image: geobeyond/starterkit:2.7.x
@@ -99,7 +99,7 @@ services:
     labels:
         org.geonode.component: django
         org.geonode.instance.name: starterkit
-        io.rancher.scheduler.affinity:host_label: geonodehost=satfarm2
+        io.rancher.scheduler.affinity:host_label: ${HOST_AFFINITY}
         io.rancher.container.pull_image: always
     depends_on:
       - db
@@ -120,7 +120,7 @@ services:
       - GEONODE_GEODATABASE_PASSWORD=geonode_data
       - BROKER_URL=amqp://guest:guest@rabbitmq:5672/
       - DJANGO_SETTINGS_MODULE=geosk.settings
-      - ALLOWED_HOSTS=['django',]
+      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
       - DOCKER_ENV=production
       - UWSGI_CMD=uwsgi --ini /usr/src/app/uwsgi.ini
       - IS_CELERY=false
@@ -164,7 +164,7 @@ services:
       - TRANSACTIONAL_ALLOWED_PROXIES=
       - TRANSACTIONAL_ALLOWED_IPS=
       - SOS_ADMIN_USERNAME=adminsos
-      
+
 
   celery:
     image: geobeyond/starterkit:2.7.x
@@ -175,7 +175,7 @@ services:
     labels:
         org.geonode.component: celery
         org.geonode.instance.name: starterkit
-        io.rancher.scheduler.affinity:host_label: geonodehost=satfarm2
+        io.rancher.scheduler.affinity:host_label: ${HOST_AFFINITY}
         io.rancher.container.pull_image: always
     depends_on:
       - db
@@ -196,7 +196,7 @@ services:
       - GEONODE_GEODATABASE_PASSWORD=geonode_data
       - BROKER_URL=amqp://guest:guest@rabbitmq:5672/
       - DJANGO_SETTINGS_MODULE=geosk.settings
-      - ALLOWED_HOSTS=['django',]
+      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
       - DOCKER_ENV=production
       - CELERY_CMD=celery worker --app=geosk.celeryapp:app --broker=amqp://guest:guest@rabbitmq:5672/ -B -l INFO
       - IS_CELERY=true
@@ -245,7 +245,7 @@ services:
     labels:
         org.geonode.component: geoserver
         org.geonode.instance.name: starterkit
-        io.rancher.scheduler.affinity:host_label: geonodehost=satfarm2
+        io.rancher.scheduler.affinity:host_label: ${HOST_AFFINITY}
         io.rancher.container.pull_image: always
     depends_on:
       - db
@@ -269,7 +269,7 @@ services:
     labels:
         org.geonode.component: consumers
         org.geonode.instance.name: starterkit
-        io.rancher.scheduler.affinity:host_label: geonodehost=satfarm2
+        io.rancher.scheduler.affinity:host_label: ${HOST_AFFINITY}
         io.rancher.container.pull_image: always
     depends_on:
       - rabbitmq
@@ -290,7 +290,7 @@ services:
       - GEONODE_GEODATABASE_PASSWORD=geonode_data
       - BROKER_URL=amqp://guest:guest@rabbitmq:5672/
       - DJANGO_SETTINGS_MODULE=geosk.settings
-      - ALLOWED_HOSTS=['django',]
+      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
       - DOCKER_ENV=production
       - UWSGI_CMD=uwsgi --ini /usr/src/app/uwsgi.ini
       - IS_CELERY=false
@@ -344,7 +344,7 @@ services:
     labels:
         org.geonode.component: sos
         org.geonode.instance.name: starterkit
-        io.rancher.scheduler.affinity:host_label: geonodehost=satfarm2
+        io.rancher.scheduler.affinity:host_label: ${HOST_AFFINITY}
         io.rancher.container.pull_image: always
     depends_on:
       - dbsos
@@ -395,7 +395,7 @@ services:
     labels:
         org.geonode.component: nginx
         org.geonode.instance.name: starterkit
-        io.rancher.scheduler.affinity:host_label: geonodehost=satfarm2
+        io.rancher.scheduler.affinity:host_label: ${HOST_AFFINITY}
     depends_on:
       - django
       - geoserver
@@ -410,7 +410,7 @@ services:
     labels:
         org.geonode.component: conf
         org.geonode.instance.name: starterkit
-        io.rancher.scheduler.affinity:host_label: geonodehost=satfarm2
+        io.rancher.scheduler.affinity:host_label: ${HOST_AFFINITY}
         io.rancher.container.start_once: 'true'
     command: /bin/true
     volumes:
