Add cron images.

--- a/templates/starterkit/0/docker-compose.yml
+++ b/templates/starterkit/0/docker-compose.yml
@@ -212,6 +212,24 @@ services:
       TRANSACTIONAL_ALLOWED_IPS:
       SOS_ADMIN_USERNAME: adminsos
 
+  cron:
+    image: geobeyond/cron:2.7.x
+    restart: unless-stopped
+    container_name: cron4${COMPOSE_PROJECT_NAME}
+    stdin_open: true
+    # tty: true
+    labels:
+        org.geonode.component: cron
+        org.geonode.instance.name: geonode
+    depends_on:
+      - db
+      - geonode
+    command: cron -f && tail -f /var/log/cron.log
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      GEONODE_INSTANCE_NAME: starterkit
+
   geoserver:
     image: geobeyond/geoserver:2.12.x-monit
     restart: unless-stopped
